# aviator

./: .gitignore  Makefile  README.md  av1an-sources.json  flatpak-pip-generator  main.py  meson.build  net.natesales.Aviator.json  net.natesales.Aviator.yml  net.natesales.rAV1ator.yml  python3-ffmpeg-python.json  python3-requirements.json  rav1e-sources.json  requirements.txt  runner.sh  setup.py  window.ui
.4f9c6ce/: done.json
.github/: FUNDING.yml
assets/: aviator_audio.avif  aviator_output.avif  aviator_splash2.avif  aviator_vid.avif  rAV1ator_splash2.avif
data/: meson.build  net.natesales.Aviator.desktop  net.natesales.Aviator.desktop.in  net.natesales.Aviator.metainfo.xml  net.natesales.Aviator.metainfo.xml.in  net.natesales.rAV1ator.metainfo.xml
data/icons/: meson.build
data/ui/: startup.blp  startup.ui  window.blp  window.ui
po/: LINGUAS  POTFILES  aviator.pot  be.po  de.po  fr.po  ka.po  meson.build  ru.po  tr.po  uk.po
src/: __init__.py  aviator.gresource.xml  aviator.in  aviator.py.in  info.py.in  main.py  meson.build  progress.py  progress_old.py  startup.ui  window.ui
